@@ -4,6 +4,7 @@
  * :folding=explicit:collapseFolds=1:
  *
  * Copyright (C) 2000, 2004 Slava Pestov
+ * Portions Copyright (C) 2011 Matthieu Casanova
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -25,6 +26,7 @@ package org.gjt.sp.jedit.io;
 //{{{ Imports
 import java.awt.Component;
 import java.util.*;
+
 import org.gjt.sp.jedit.msg.DynamicMenuChanged;
 import org.gjt.sp.jedit.*;
 //}}}
@@ -105,6 +107,32 @@ public class FavoritesVFS extends VFS
 		return false;
 	} //}}}
 
+	//{{{ _delete() method
+
+	/**
+	 * Rename a favorite
+	 * @param session no session needed you can give null
+	 * @param from The old path (not the name)
+	 * @param to the new name
+	 * @param comp The component that will parent error dialog boxes
+	 * @return true if the favorite having that old path exists
+	 */
+	@Override
+	public boolean _rename(Object session, String from, String to, Component comp)
+	{
+		VFSFile[] favorites = getFavorites();
+		for (int i = 0; i < favorites.length; i++)
+		{
+			Favorite favorite = (Favorite) favorites[i];
+			if (favorite.getPath().equals(from))
+			{
+				favorite.label = to;
+				return true;
+			}
+		}
+		return false;
+	}  //}}}
+
 	//{{{ loadFavorites() method
 	public static void loadFavorites()
 	{
@@ -112,14 +140,20 @@ public class FavoritesVFS extends VFS
 		{
 			favorites = new LinkedList<Favorite>();
 
-			String favorite;
+			String favoritePath;
 			int i = 0;
-			while((favorite = jEdit.getProperty("vfs.favorite." + i)) != null)
+			while((favoritePath = jEdit.getProperty("vfs.favorite." + i)) != null)
 			{
-				favorites.add(new Favorite(favorite,
+				Favorite favorite = new Favorite(favoritePath,
 					jEdit.getIntegerProperty("vfs.favorite."
 					+ i + ".type",
-					VFSFile.DIRECTORY)));
+								VFSFile.DIRECTORY));
+				favorites.add(favorite);
+				String label = jEdit.getProperty("vfs.favorite." + i + ".label");
+				if (label != null)
+				{
+					favorite.label = label;
+				}
 				i++;
 			}
 		}
@@ -159,6 +193,8 @@ public class FavoritesVFS extends VFS
 			{
 				jEdit.setProperty("vfs.favorite." + i,
 					favorite.getPath());
+				jEdit.setProperty("vfs.favorite." + i
+					+ ".label", favorite.getLabel());
 				jEdit.setIntegerProperty("vfs.favorite." + i
 					+ ".type", favorite.getType());
 
@@ -190,11 +226,19 @@ public class FavoritesVFS extends VFS
 	//}}}
 
 	//{{{ Favorite class
-	static class Favorite extends VFSFile
+	public static class Favorite extends VFSFile
 	{
+		private String label;
+
 		Favorite(String path, int type)
 		{
 			super(path,path,PROTOCOL + ':' + path,type, 0L,false);
+			this.label = path;
+		}
+
+		public String getLabel()
+		{
+			return label;
 		}
 
 		@Override
@@ -208,6 +252,12 @@ public class FavoritesVFS extends VFS
 				// etc.
 				return null;
 			}
+		}
+
+		@Override
+		public VFS getVFS()
+		{
+			return VFSManager.getVFSForProtocol(FavoritesVFS.PROTOCOL);
 		}
 	} //}}}
 }
